@@ -17,6 +17,8 @@ Version 1.7.0-svn:
    * new translations: Icelandic
    * updated translations: British English, Catalan, Chinese (Simplified),
       German, Finnish, Hebrew, Italian, Russian, Slovak, Turkish
+   * Updated CJK character range
+   * Fixed word wrapping in CJK languages (patch #1140 from sylecn)
  * AI:
    * Fixed incorrect handling of poisoning attacks when suggesting best attack
      in user interface
